--- a/src/main/resources/templates/profile/index.html
+++ b/src/main/resources/templates/profile/index.html
@@ -95,9 +95,11 @@
               <img src="/assets/img/profile-img.jpg" alt="Profile" class="rounded-circle">
               <h2 th:text="${usersName}">佐藤太郎</h2>
               <div class="social-links mt-2">
-                <form th:action="@{/profile/add}" th:object="${requestFriend}" method="post">
-                  <button type="submit" class="btn btn-primary rounded-pill" name=status value="${1}">友達申請</button>
-                </form>
+			   <th:block th:if="${usersId != loginId && usersId != null}">
+                 <form th:action="@{/profile/add/{usersId}(usersId=${usersId})}" th:object="${requestFriend}" method="post">
+                  <button type="submit" class="btn btn-primary rounded-pill" name=status value="1">友達申請</button>
+                 </form>
+                </th:block>
               </div>
             </div>
           </div>
