--- a/src/main/resources/templates/profile/index.html
+++ b/src/main/resources/templates/profile/index.html
@@ -91,7 +91,7 @@
           <div class="card">
             <div class="card-body profile-card pt-4 d-flex flex-column align-items-center">
 
-            	<img th:src="(*{users.iconUri} ? ${@storageService.getDataUri(users.iconUri)} : '/assets/img/profile-img.jpg')"  class="rounded-circle" style="width: 120px;">
+            	<img th:src="(*{users.iconUri} ? ${@storageService.getDataUri(users.iconUri)} : '/assets/img/profile-dummy.png')"  class="rounded-circle" style="width: 120px;">
              	<h2 th:text="${usersName}">佐藤太郎</h2>
               <div class="social-links mt-2">
 			     <th:block th:if="${usersId != loginId && usersId != null}">
